# april-fools

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
afengine/: CMakeLists.txt  afengine.h
afengine/application/: Application.cc  Application.h
afengine/foundation/: CMakeLists.txt  foundation.h
afengine/foundation/memory/: CMakeLists.txt  memory.h
afengine/foundation/object/: CMakeLists.txt  Object.cc  Object.h  ObjectId.h  ObjectIdTraits.h  constants.h  object.h
afengine/foundation/object/internal/: BasicObjectId.h  CMakeLists.txt  constants.h  internal.h
afengine/foundation/object/internal/macos/: CMakeLists.txt  ObjectIdHooks.cc  ObjectIdHooks.h
afengine/foundation/object/internal/windows/: ObjectIdHooks.cc  ObjectIdHooks.h
afengine/foundation/object/macos/: CMakeLists.txt  ObjectIdOperators.cc  ObjectIdTraits.h
afengine/foundation/object/pool/: ObjectPool.h
afengine/foundation/object/pool/internal/: CMakeLists.txt  ObjectPoolAllocator.h
afengine/foundation/object/windows/: ObjectIdOperators.cc  ObjectIdTraits.h
afengine/foundation/runtime/: CMakeLists.txt  Runtime.cc  Runtime.h
afengine/foundation/runtime/internal/: internal.h
afengine/foundation/runtime/internal/macos/: CMakeLists.txt  Runtime.cc
afengine/foundation/runtime/internal/macos/cocoa/: AFEngineApplication.h  AFEngineApplication.mm  CMakeLists.txt  cocoa.h  (+3 more)
afengine/foundation/runtime/internal/windows/: Runtime.cc
afengine/foundation/runtime/platform/: CMakeLists.txt  platform.h
afengine/foundation/traits/: CMakeLists.txt  Factory.h  Singleton.h  traits.h
afengine/foundation/types/: CMakeLists.txt  coroutine.h  string.h  typedefs.h  types.h
afengine/foundation/types/concepts/: CMakeLists.txt  ClassTypes.h  Factory.h  concepts.h  reflection.h
afengine/foundation/types/meta/: CMakeLists.txt  InheritanceInfo.h  TypeInfo.h  meta.h
afengine/macros/: CMakeLists.txt  macros.h
afengine/runtime/: CMakeLists.txt  runtime.h
afengine/runtime/concurrent/: CMakeLists.txt  Task.h  TaskAwaiter.h  Worker.cc  Worker.h  WorkerPool.cc  WorkerPool.h  concurrent.h
afengine/runtime/platform/: CMakeLists.txt  platform.h
afengine/runtime/platform/core/: CMakeLists.txt  Platform.h  ProcessInfo.cc  ProcessInfo.h  core.h
afengine/runtime/platform/macos/: AFEngineApplication.h  AFEngineApplication.m  AFEngineApplication.mm  AFEngineApplicationDelegate.h  AFEngineApplicationDelegate.mm  AFEngineMenu.h  AFEngineMenu.mm  AFEngineWindow.h  AFEngineWindow.mm  CMakeLists.txt  Platform.h  Platform.mm
afengine/runtime/platform/windows/: CMakeLists.txt  Platform.cc  Platform.h  common.h
afengine/runtime/runtime/: CMakeLists.txt  Runtime.cc  Runtime.h
afengine/tests/: CMakeLists.txt  main.cc
afengine/tests/application/: ApplicationTests.cc  ApplicationTests.h
afengine/tests/fixtures/: CMakeLists.txt  ObjectIdFactories.h
afengine/tests/foundation/object/: CMakeLists.txt  ObjectIdTests.cc  ObjectIdTests.h
src/AFEditor/: CMakeLists.txt
src/AFEngine/: AFEngine.cc  AFEngine.h  CMakeLists.txt
src/AFEngine/Application/: Application.cc  Application.h  CMakeLists.txt
src/AFEngine/Foundation/: CMakeLists.txt  Foundation.h  Object.h
src/AFEngine/Foundation/ObjectId/: CMakeLists.txt  ObjectId.h
src/AFEngine/Foundation/ObjectId/Implementation/: CMakeLists.txt  unix.cc  windows.cc
src/AFEngine/Foundation/Runtime/: CMakeLists.txt  Runtime.cc  Runtime.h
src/AFEngine/Foundation/Runtime/Implementation/: CMakeLists.txt  Windows.cc  macOS.cc
src/afeditor/: CMakeLists.txt
src/afengine/: CMakeLists.txt  afengine.h
src/afengine/application/: Application.cc  Application.h  CMakeLists.txt
src/afengine/foundation/: CMakeLists.txt  Object.h  concepts.h  foundation.h  string.h  types.h
src/afengine/foundation/memory/: memory.h
src/afengine/foundation/object/: CMakeLists.txt  Object.cpp  Object.h
src/afengine/foundation/object/id/: CMakeLists.txt  ObjectId.cc  ObjectId.h
src/afengine/foundation/object/pool/: CMakeLists.txt  ObjectPool.cc  ObjectPool.h
src/afengine/foundation/objectId/: CMakeLists.txt  ObjectId.h
src/afengine/foundation/objectId/implementation/: unix.cc  windows.cc
src/afengine/foundation/runtime/: CMakeLists.txt  Runtime.cc  Runtime.h
src/afengine/foundation/runtime/implementation/: CMakeLists.txt  Windows.cc  macOS.cc
src/afengine/foundation/runtime/internal/: CMakeLists.txt  internal.h
src/afengine/foundation/traits/: CMakeLists.txt  Factory.h  Inherits.h  traits.h
src/afengine/foundation/types/: string.h  types.h
src/afengine/foundation/types/concepts/: CMakeLists.txt  Factory.h  concepts.h
src/afengine/foundation/types/meta/: InheritanceInfo.h  TypeInfo.h  meta.h
(+59 files in other folders)
